--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "postinstall": "sh post-install.sh",
     "dev": "next dev",
     "build": "next build",
+    "format": "prettier --write \"src/**/*.ts\"",
     "serve": "next start",
     "lint": "next lint"
   },
@@ -33,6 +34,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
     "tailwindcss": "^3.2.6",
     "typescript": "4.9.5"
   }
