--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "postinstall": "sh post-install.sh",
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "format": "prettier --write \"src/**/*.ts\"",
     "serve": "next start",
     "lint": "next lint"
@@ -15,6 +16,7 @@
     "@next/font": "13.1.6",
     "download-cli": "^1.1.1",
     "next": "13.1.6",
+    "next-sitemap": "^3.1.52",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
