--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-activity-calendar": "^1.7.0",
     "react-icons": "^4.7.1",
     "react-markdown": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "react-tooltip": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "18.13.0",
