--- a/package.json
+++ b/package.json
@@ -12,23 +12,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codinasion/tools": "codinasion/tools",
     "@giscus/react": "^2.2.8",
     "@headlessui/react": "^1.7.10",
+    "@next/env": "^13.2.3",
     "@next/font": "13.2.1",
     "download-cli": "^1.1.1",
     "next": "13.1.6",
     "next-sitemap": "^3.1.54",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-activity-calendar": "^1.7.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-markdown": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tooltip": "^4.5.1",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
-    "sharp": "^0.31.3",
-    "react-tooltip": "^4.5.1"
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@types/node": "18.14.2",
