--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codinasion",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,35 +8,36 @@
     "postbuild": "next-sitemap",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "serve": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "all": "yarn format && yarn lint && yarn build && yarn serve"
   },
   "dependencies": {
     "@giscus/react": "^2.2.8",
-    "@headlessui/react": "^1.7.13",
-    "@next/env": "^13.2.4",
-    "next": "13.2.4",
-    "next-sitemap": "^4.0.5",
+    "@headlessui/react": "^1.7.14",
+    "@next/env": "^13.3.1",
+    "next": "13.3.1",
+    "next-sitemap": "^4.0.7",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-markdown": "^8.0.5",
+    "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
-    "sharp": "^0.31.3"
+    "sharp": "^0.32.0"
   },
   "devDependencies": {
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@types/node": "18.16.1",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.1",
     "@types/react-syntax-highlighter": "^15.5.6",
-    "autoprefixer": "^10.4.14",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5"
+    "autoprefixer": "10.4.14",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.3.1",
+    "postcss": "8.4.23",
+    "prettier": "^2.8.8",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4"
   }
 }
