--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sharp": "^0.32.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
@@ -35,6 +36,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "get-language-data": "^0.0.7",
     "postcss": "8.4.23",
     "prettier": "^2.8.8",
     "tailwindcss": "3.3.2",
