--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_CODINASION_URL="https://codinasion.org"
 NEXT_PUBLIC_CODINASION_API_URL="https://api.codinasion.org"
 
 NEXT_PUBLIC_GITHUB_API_URL="https://api.github.com"
